--- a/src/block/common/tabs/_.less
+++ b/src/block/common/tabs/_.less
@@ -1,6 +1,10 @@
 .tabs__{ 
 	&panel{
-		margin-bottom: 25px;
+		margin-bottom: 15px;
+		.media-breakpoint-up(@md; {
+			margin-bottom: 25px;
+		});
+
 	}
 	&nav{
 		margin: -10px 0px 0;
@@ -22,7 +26,7 @@
 	}
 	&link{
 		.btn-clearfix();
-		font-size: 0.66em;
+		font-size: 0.6em;
 		letter-spacing: 0.1em;	
 		line-height: 130%;
 
